--- a/less/footer.less
+++ b/less/footer.less
@@ -1,4 +1,16 @@
 // Footer Styles
+.btn {
+  .button-creator(200px, 45px, @button-bg, #22283A, 1.8rem);   
+
+.btn-class {
+  padding: 10px 40px;
+  border-radius: 10px;
+  background-color: #22283A;
+  color: white;
+  cursor: pointer;
+  }
+
+
 footer {
   color: #22283B;
   background: #f4f4f4;
