--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,13 +7,15 @@
     border-bottom: 2px solid @nav-border;
     position: fixed;
     
+}
   
     .nav-container {
       height: 100%;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      
+
+    }
   
       @media @mobile {
         flex-wrap: wrap;
