--- a/less/navigation.less
+++ b/less/navigation.less
@@ -18,10 +18,11 @@
     }
   
       @media @mobile {
-        flex-wrap: wrap;
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;
         padding-top: 10px;
       }
+    }
   
       .logo-heading {
         @media @mobile {
