--- a/css/index.css
+++ b/css/index.css
@@ -155,6 +155,11 @@ p {
   font-size: 1.6rem;
   line-height: 1.4;
 }
+
+header h1 {
+  font-size: 2rem;
+}
+
 .container {
   max-width: 800px;
   width: 100%;
