--- a/css/index.css
+++ b/css/index.css
@@ -164,6 +164,14 @@ header h1 {
 
 }
 
+.nav-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 10px 0;
+}
+
 .container {
   max-width: 800px;
   width: 100%;
